--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,4 +51,7 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     implementation 'com.squareup.okhttp:okhttp:2.7.0'
     implementation 'jp.wasabeef:blurry:4.0.0'
+
+    implementation 'com.airbnb.android:lottie:3.4.0'
+
 }
